# Acconeer_A1_ROS

./: README.md
acconeer_sensor/: CMakeLists.txt  package.xml
acconeer_sensor/include/: acc_board.h  acc_definitions.h  acc_detector_distance_basic.h  acc_detector_distance_peak.h  acc_detector_motion.h  acc_detector_obstacle.h  acc_detector_obstacle_configuration.h  acc_detector_obstacle_processing.h  acc_device_gpio.h  acc_device_memory.h  acc_device_os.h  acc_driver_24cxx.h  acc_driver_i2c_linux.h  acc_log.h  acc_log_integration.h  acc_rss.h  acc_service.h  acc_service_envelope.h  acc_service_iq.h  acc_service_power_bins.h  acc_service_sparse.h  acc_sweep_configuration.h  acc_types.h  acc_version.h
acconeer_sensor/msg/: Num.msg  sensData.msg
acconeer_sensor/src/: talker.cpp  topic_subscriber.cpp
